src/less/promo.less
.promo {
	&__wrapper-slides {
		height: 321px;
		@media (min-width: @screen-md) {
			height: 431px;
		}
	}
	&__slide {
		background-size: cover;
		background-position-x: 50%;
		height: 100%;
		padding-top: 19px;
		@media (min-width: @screen-md) {
			padding-top: 100px;
		}
	}
	&__slide-title {
		margin: 0;
		font-size: 18px;
		line-height: 26px;
		text-align: center;
		margin-bottom: 21px;
		@media (min-width: @screen-sm) {
			font-size: @font-size--h1;
			line-height: 42px;
			text-align: left;
			span {
				background-color: rgba(255, 255, 255, 0.9);
			}
		}
	}
	&__slide-text {
		line-height: 24px;
		text-align: center;
		@media (min-width: @screen-sm) {
			font-size: 18px;
			text-align: left;
			span {
				background-color: rgba(255, 255, 255, 0.9);
				padding-top: 3px;
				padding-bottom: 3px;
			}
		}
	}
	&__slide-inner {
		background-color: rgba(255, 255, 255, 0.9);
		padding-top: 9px;
		padding-bottom: 9px;
		@media (min-width: @screen-sm) {
			background-color: transparent;
		}
	}
	&__slider-tabs {
		list-style: none;
		text-align: center;
		padding: 0;
	}
	&__tab {
		display: inline-block;
		margin-right: 22px;
		&:last-child {
			margin-right: 0;
		}
		a {
			font-size: 14px;
			color: @gray-light;
			text-transform: uppercase;
			text-decoration: none;
			position: relative;
		}
		&--active a, a:hover {
			color: @orange-color;
			&:after {
				content: "";
				display: block;
				position: absolute;
				width: 30px;
				height: 2px;
				background-color: @orange-color;
				transform: translate(-50%);
				left: 50%;
			}
		}
	}
}

